--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,25 @@ on:
       - '**'
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.23.3'
+          check-latest: true
+
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Build
+        run: go build -o server cmd/main.go
+
   test:
     runs-on: ubuntu-latest
 
@@ -24,3 +43,4 @@ jobs:
 
       - name: Run tests
         run: go test ./...
+
